# PipeWrench

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  pipewrench.cpp
include/: AIBackend.h  ChatPanel.h  KeyboardController.h  MqttClient.h  MyWindow.h  OllamaBackend.h  OpenAIBackend.h  RecentCapturesPanel.h  SauronAgent.h  SauronEyePanel.h  SauronWindow.h  WindowColumns.h  X11ScreenCapturer.h
src/: Main.cpp
src/agent/: AIBackend.cpp  Main.cpp  OllamaBackend.cpp  OpenAIBackend.cpp  SauronAgent.cpp
src/capture/: X11ScreenCapturer.cpp
src/input/: KeyboardController.cpp
src/mqtt/: MqttClient.cpp
src/ui/: ChatPanel.cpp  MyWindow.cpp  RecentCapturesPanel.cpp  SauronEyePanel.cpp  SauronWindow.cpp  SauronWindowAgent.cpp
